--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8" />
 
         <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700" rel="stylesheet"/>
-        <title>React Starter</title>
+        <title>Github Issue Explorer</title>
         <style>
          html, body, #root {
             margin: 0;
